# eSSVI-vol-surface-risk-reversal

./: .gitignore  LICENSE  README.md  THERMO_NUCLEAR_REVIEW.md  THERMO_NUCLEAR_REVIEW_2.md  dataingestion.md  eSSVI_surface_plan (1).md  verify_phase3.py  w_last_verification_result.json
.cursor/: mcp.json
core_engine/: ENV.example  README.md  THETA_API.md  __init__.py  example_usage.py  pyproject.toml  requirements.txt
core_engine/shared/: __init__.py  calibration_config.py  config.py  constants.py  db.py  parse.py  theta_client.py
core_engine/theta_data_core_engine.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
dataingestion/: COLUMNS.md  anchors.py  cache.py  chunking.py  cleaning.py  config.py  conftest.py  db_writer.py  dividends.py  fetchers.py  joins.py  logging.py  math.py  orchestrator.py  retry.py  run_order.md  test_cache.py  test_chunking.py  test_cleaning.py  test_config.py  test_db_writer.py  test_fetchers.py  test_joins.py  test_math.py  test_orchestrator.py  test_verify.py  verify.py
essvi/: __init__.py  anchor.py  audit.py  config.py  constraints.py  exceptions.py  loader.py  objective.py  persistence.py  regularize.py  runtime.py  sequential.py  solver.py  surface.py
prime_intellect_experiment/: .env.example  experiment.py  verifiers_demo.py
tests/: conftest.py  test_anchor.py  test_audit.py  test_constraints.py  test_loader.py  test_objective.py  test_persistence.py  test_regularize.py  test_runtime.py  test_sequential.py  test_solver.py  test_surface.py
theta_terminal/: .gitignore  creds.txt.example
(+104 files in other folders)
