[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "theta-data-core-engine"
version = "1.0.0"
description = "Minimal Theta Data Terminal v3 REST API client"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.9.0",
    "asyncpg>=0.29.0",
    "numpy>=1.26.0",
    "pandas>=2.0.0",
    "pytz>=2024.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["core_engine*"]